<?xml version="1.0" encoding="UTF-8"?>
<!--
ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
ZZZ  This file is automatically generated, don't change it manually!  ZZZ
ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.simplicite.modules</groupId>
  <version>0.3-SNAPSHOT</version>
  <artifactId>ChatGPT</artifactId>
  <name>ChatGPT</name>
  <description>Simplicite module: ChatGPT</description>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <simplicite.url>https://candicetest.demo.simplicite.io</simplicite.url>
    <simplicite.version>6.3-SNAPSHOT</simplicite.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <sonar.projectKey>simplicite-modules-ChatGPT</sonar.projectKey>
    <sonar.projectName>ChatGPT</sonar.projectName>
    <sonar.projectVersion>0.3</sonar.projectVersion>
    <sonar.sources>src,resources</sonar.sources>
    <sonar.exclusions>**.min.js,**.min.css</sonar.exclusions>
    <sonar.coverage.exclusions>resources/**.js,src/**.java</sonar.coverage.exclusions>
  </properties>
  <packaging>jar</packaging>
  <url>${simplicite.url}</url>
  <build>
    <sourceDirectory>${project.basedir}/src</sourceDirectory>
    <testSourceDirectory>${project.basedir}/test/src</testSourceDirectory>
    <resources>
      <resource><directory>${project.basedir}/resources</directory></resource>
    </resources>
    <testResources>
      <testResource><directory>${project.basedir}/test/resources</directory></testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <excludes>
            <exclude>.gitkeep</exclude>
            <exclude>Disposition/**</exclude>
            <exclude>ObjectInternal/**</exclude>
            <exclude>ObjectExternal/**</exclude>
            <exclude>BPMProcess/**</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>simplicite</id>
      <url>${simplicite.url}/maven</url>
      <releases><enabled>true</enabled></releases>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>
  <scm>
    <url>${simplicite.url}/git/ChatGPT</url>
  </scm>
  <dependencies>
    <dependency>
      <groupId>com.simplicite</groupId>
      <artifactId>simplicite-api</artifactId>
      <version>${simplicite.version}</version>
    </dependency>
    <dependency>
      <groupId>com.simplicite</groupId>
      <artifactId>simplicite-api</artifactId>
      <version>${simplicite.version}</version>
      <classifier>javadoc</classifier>
    </dependency>
    <dependency>
      <groupId>com.simplicite</groupId>
      <artifactId>simplicite-api</artifactId>
      <version>${simplicite.version}</version>
      <classifier>sources</classifier>
    </dependency>
  </dependencies>
</project>
